# yatima

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Foo.lean  LICENSE  Main.lean  README.md  Test.lean  Yatima.lean  ffi.c  flake.nix  lake-manifest.json  lakefile.lean  lean-toolchain  output.lurk  storedebug  tc_output.txt
Fixtures/: Definitions.lean  Inductives.lean  MutDefBlock.lean
Tests/: AnonCidGroups.lean  CID.lean  CidAnonEqNEq.lean  DagCbor.lean  ExprGen.lean  FromIpld.lean  Multibase.lean  Multihash.lean  Prelude.lean  Termination.lean  Typechecker.lean  UnsignedVarInt.lean
TestsUtils/: CodeGenAndRunTests.lean  CompilationTestsExtractors.lean  CompileAndExtractTests.lean  ContAddrAndExtractTests.lean  ExprGenerator.lean  TestGenerator.lean  TranspileTests.lean
Yatima/: Cid.lean  Compiler.lean  Const.lean  Cronos.lean  DebugUtils.lean  Env.lean  Expr.lean  ExprGenerator.lean  ForStdLib.lean  FromLean.lean  FromLean2.lean  Graph.lean  Kind.lean  Lurk.lean  Name.lean  Store.lean  Talk.lean  ToIpld.lean  Univ.lean  Utils.lean  YExprGenerator.lean  YatimaSpec.lean
examples/: Foo.lean  MutDefs.lean  Prelude.lean
lean_packages/: manifest.json
lurk_output/: output.lurk
yatima-rs/: Cargo.toml  syntax.md
yatima-rs/src/: constant.rs  environment.rs  expression.rs  lib.rs  name.rs  nat.rs  parse.rs  typechecker.rs  universe.rs
yatima-rs/src/parse/: base.rs  constant.rs  env.rs  error.rs  expr.rs  name.rs  string.rs  univ.rs  utils.rs
yatima-rs/src/typechecker/: check.rs  equality.rs  evaluation.rs  expression.rs  from_anon.rs  universe.rs  value.rs
(+340 files in other folders)
