[package]
name = "yatima-lang"
version = "0.1.0"
edition = "2021"
authors = [
    "John C. Burnham <john@yatima.io>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
std = []

[dependencies]
base-x = { version = "0.2.8", default-features = false }
multibase = { version = "0.9.1", default-features = false }
multihash = { version = "0.16.2", default-features = false, features = ["alloc", "secure-hashes"] }
cid = { version = "0.8.4", default-features = false, features = ["alloc", "serde-codec"] }
libipld = { package = "lurk-ipld", version = "0.1.0", default-features = false, features = ["dag-cbor", "dag-json", "serde-codec"] }
serde = { version = "1.0.137", default-features = false, features = ["alloc", "serde_derive"] }
serde_tuple = "0.5.0"
serde_repr = "0.1.8"
num-bigint = { version = "0.4.3", default-features = false, features = ["serde"] }
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
nom_locate = "4.0.0"
num-traits = "0.2.15"
im = "15.1.0"
sized-chunks = "0.7.0"

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8.3"
quickcheck_macros = "1.0.0"
